
- Compiler:
  - Specializations on implicit "or" types like "number" or "boolean" now
     work, removing the requirement for the inferred types to match
     declared types exactly.  Specializations are matched from first to
     last to resolve ambiguities (#1214).
  - Compiler rewrites for char{<,>,<=,>=,=}? are now safe (#1122).

- Unit "posix": The following posix procedures now work on port
    objects: file-stat, file-size, file-owner, file-permissions,
    file-modification-time, file-access-time, file-change-time,
    file-type and all procedures using file-type. These are:
    regular-file?, symbolic-link?, block-device?, character-device?
    fifo? and socket?.

4.10.1

- Core libraries
  - try-compile from setup-api cleans up temporary output files (#1213).

- Runtime system:
  - The calling convention of CPS procedures has been changed to
    use "argument vectors" instead of C calling convention.
  - The C API of C_values(), C_do_apply() and how to invoke CPS
    functions has changed.  The C_procN() macros have disappeared.
    The manual example in "Accessing external objects" for C_values
    has been updated.  See also the "numbers" egg for examples on
    how to support pre- and post-4.10.1 CHICKENs simultaneously.
  - Apply hack is no longer used; the limitation of 128 arguments
    has been lifted for platforms which had no apply hack.
  - Increased the "binary compatibility version" to 8.

4.10.0

- Security fixes
  - CVE-2014-6310: Use POSIX poll() on Android platform to avoid
    potential select() buffer overrun.
  - CVE-2014-9651: substring-index[-ci] no longer scans beyond string
    boundaries.
  - CVE-2015-4556: string-translate* no longer scans beyond string
    boundaries.

- Core libraries
  - alist-ref from unit data-structures now gives an error when passed
    a non-list, for consistency with assv/assq/assoc.
  - Unit tcp now implicitly depends on ports instead of extras.