@@ -60,7 +60,7 @@ synrules.scm:
 
 irregex.scm:
 
-  Copyright (c) 2005-2011, Alex Shinn
+  Copyright (c) 2005-2015, Alex Shinn
   All rights reserved.
   
   Redistribution and use in source and binary forms, with or without
