@@ -73,6 +73,27 @@ a**	-	c	-	-
 (a+|b)*	ab	y	&-\1	ab-b
 (a+|b)+	ab	y	&-\1	ab-b
 (a+|b)?	ab	y	&-\1	a-a
+(a+|b){0,0}	ab	y	&-\1	-
+(a+|b){0,2}	ab	y	&-\1	ab-b
+(a+|b){1,2}	ab	y	&-\1	ab-b
+^(a+|b){0,0}$	a	n	-	-
+^(a+|b){1,2}$	ab	y	&-\1	ab-b
+^(a+|b){1,2}$	abc	n	-	-
+^(a+|b){0,1}$	ab	n	-	-
+(a+|b){0,2}b	ab	y	&-\1	ab-a
+(a+|b){0,2}b	aab	y	&-\1	aab-aa
+(a+|b){0,2}b	abb	y	&-\1	abb-b
+(a+|b){0,2}?b	ab	y	&-\1	ab-a
+(a+|b){0,2}?b	aab	y	&-\1	aab-aa
+(a+|b){0,2}?b	abb	y	&-\1	ab-a
+^(a+|b){0,2}?b$	abb	y	&-\1	abb-b
+^(a+|b){0,2}?$	aab	y	&-\1	aab-b
+^((a+)|(b)){0,2}?$	aaab	y	&-\1-\2-\3	aaab-b-aaa-b
+^(a+|b){0,0}?$	a	n	-	-
+(a+|b){0,0}?	ab	y	&-\1	-
+(a+|b){1,2}?b	b	n	-	-
+(a+|b){0,2}?ab	ab	y	&-\1	ab-
+(a+|b){2,3}?b	ab	n	-	-
 [^ab]*	cde	y	&	cde
 (^)*	-	c	-	-
 (ab|)*	-	c	-	-
@@ -149,3 +170,4 @@ multiple words	multiple words, yeah	y	&	multiple words
 (we|wee|week)(knights|night)	weeknights	y	&-\1-\2	weeknights-wee-knights
 (a([^a])*)*	abcaBC	y	&-\1-\2	abcaBC-aBC-C
 ([Aa]b).*\1	abxyzab	y	&-\1	abxyzab-ab
+a([\/\\]*)b	a//\\b	y	&-\1	a//\\b-//\\
